--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,19 @@
-{}
+{
+  "rewrites": [
+    {
+      "source": "/auth/verify-email",
+      "destination": "/auth/verify-email"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/auth/(.*)",
+      "headers": [
+        {
+          "key": "X-Robots-Tag",
+          "value": "noindex"
+        }
+      ]
+    }
+  ]
+}
